# sass-new-api

./: .env.example  .gitignore  README.md
apps/dmit-api/: .env.example  ecosystem.config.cjs  package-lock.json  package.json
apps/gateway/: README.md  pyproject.toml
apps/gateway/src/gateway/: api_v1.py  app.py  auth.py  models_catalog.py  profiling.py  settings.py  supabase_store.py
apps/gateway/src/gateway/adapters/: base.py  factory.py  openai_compatible.py
apps/gateway/src/token_saas_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: admin-accounts.md  admin-auth.md  admin-chat-app-integration.md  admin-personal-settings.md  admin-pricing.md  admin-subscription.md  admin-task.md  admin-token-management.md  admin-topup.md  admin-usage-log.md  admin-use-api.md  affiliate-distribution.md  analytics.md  architecture.md  dmit-api-batch-three-gateway.md  dmit-api-batch-two-me-tokens-checkout.md  dmit-api-minimal-supabase.md  dmit-server-calibration-guide.md  fix-auth-new-user-profile-trigger.sql  new-api-reference.md  performance-profiling.md  project-intro.md  role-permissions-matrix-v1.md  sprint-1-detailed.md  supabase-migration-credit-ledger-extras.sql  supabase-migration-profiles-credits.sql  supabase-rls-v1.md  supabase-rpc-credits.sql  supabase-schema-ops-v1.sql  supabase-schema-upstreams.sql  supabase-schema-v1.sql  system-spec.md  tokfai-platform-handbook.md  v1-roadmap.md  v1-taskboard.md
docs/console/: channel.md  custom-oauth.md  docs-about.md  groups.md  (+8 more)
(+105 files in other folders)
