[project]
name = "token-saas-gateway"
version = "0.1.0"
description = "Hand-rolled V1 gateway (FastAPI) with optional profiling."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
profiling = [
  "pyroscope-io>=0.9.0",
  "pyinstrument>=4.6.0",
]

[tool.uvicorn]
factory = true

